# Go3D

./: .gitignore  CMakeLists.txt
assets/: board13.xcf  board19.xcf  stone.glb
assets/shaders/: cube.frag  cube.vert  default2D.frag  default2D.vert  default3D.frag  default3D.vert
include/: board.h  board.hpp  group.h  group.hpp  states.h  states.hpp  tile.h  tile.hpp  types.h
include/glad/: glad.h
include/graphics/: camera.hpp  input.hpp  light.hpp  logic_interface.hpp  mesh.hpp  object3d.h  ray.hpp  renderer.h  renderer.hpp  scene.hpp
include/graphics/objects/: mesh.hpp  object.hpp  object2d.hpp  object3d.hpp  shader.hpp
include/utils/: renderer.h
src/: board.cpp  glad.c  group.cpp  main.cpp  states.cpp  tile.cpp
src/graphics/: camera.cpp  input.cpp  light.cpp  logic_interface.cpp  mesh.cpp  object3d.cpp  ray.cpp  renderer.cpp  scene.cpp
src/graphics/objects/: mesh.cpp  object.cpp  object2d.cpp  object3d.cpp  shader.cpp
src/utils/: renderer.cpp
